--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "leaflet": "^1.7.1",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-leaflet": "^3.2.1",
+    "react-toastify": "^7.0.4",
     "styled-components": "^5.3.1"
   },
   "devDependencies": {
